--- a/src/post.css
+++ b/src/post.css
@@ -248,3 +248,10 @@ html.dark .hero-cloud {
     padding: 24px 0 40px;
     text-align: center;
 }
+
+.pdf-frame {
+    width: 100%;
+    height: 80vh;
+    border: 0;
+    display: block;
+}
